--- a/index.css
+++ b/index.css
@@ -1,121 +1,105 @@
 .attribution {
     font-size: 11px;
     text-align: center;
-  }
+}
 
-  .attribution a {
+.attribution a {
     color: hsl(228, 45%, 44%);
-  }
-  body{
-      background-color:hsl(233, 47%, 7%) ;
-  }
+}
 
-  #maindiv {
-    display: flex;    
-  }
+body {
+    background-color: hsl(233, 47%, 7%);
+}
 
+#maindiv {
+    display: flex;
+}
 
-  .font {
+.font {
     font-family: 'Inter', sans-serif;
-  }
+}
 
-  .color {
+.color {
     color: hsla(0, 0%, 100%, 0.6);
-  }
+}
 
-  .para {
-
+.para {
     font-size: 16px;
     margin-top: 2.5em;
     line-height: 1.5em;
-  }
+}
 
-  .heading,
-  .h2 {
+.heading, .h2 {
     color: white;
-  }
+}
 
-  #insight {
+#insight {
     color: hsl(277, 64%, 61%);
-  }
+}
 
-  #divf {
+#divf {
     background-color: hsl(244, 38%, 16%);
     padding: 5vh 4vw;
     display: flex;
     flex-direction: column;
-  }
+}
 
-  .div3s {
+.div3s {
     display: flex;
-  }
+}
 
-
-
-  #divs {
-
+#divs {
     background-color: hsl(277, 64%, 61%);
     object-fit: contain;
+}
 
-  }
-
-  img {
+img {
     opacity: .6;
     filter: grayscale(100%);
-   
-  }
+}
 
-  @media (min-width:700px) {
+@media (min-width:700px) {
     .text {
-      max-width: 25em;
+        max-width: 25em;
     }
-
     .div3s {
-      max-width: 25em;
-
-      flex-direction: row;
+        max-width: 25em;
+        flex-direction: row;
     }
-
     .div3s>* {
-      flex-basis: 100%;
+        flex-basis: 100%;
     }
-
     #divs {
-      width: 50%;
-    }img{
-      width: 100%;
-    height: 100%;
-    }#maindiv{
-      padding: 20vh 22vw;
-    }
-  }
-
-  @media (max-width:699px) {
-    #maindiv {
-      flex-direction: column-reverse;
-      
-      padding: 15vh 12vw;
-    
-    }
-
-    .div3s {
-      flex-direction: column;
-    }
-
-    .div3s>* {
-      width: 100%;
-    }
-
-    .h2,
-    .p1,
-    .heading,
-    .para {
-      text-align: center;
+        width: 50%;
     }
     img {
-     width: 100%;
-      height: 100%;
-    }.heading{
-      font-size: 28px;
+        width: 100%;
+        height: 100%;
     }
-  }
+    #maindiv {
+        padding: 20vh 22vw;
+    }
+}
+
+@media (max-width:699px) {
+    #maindiv {
+        flex-direction: column-reverse;
+        padding: 15vh 12vw;
+    }
+    .div3s {
+        flex-direction: column;
+    }
+    .div3s>* {
+        width: 100%;
+    }
+    .h2, .p1, .heading, .para {
+        text-align: center;
+    }
+    img {
+        width: 100%;
+        height: 100%;
+    }
+    .heading {
+        font-size: 28px;
+    }
+}
